# wxorca

./: .gitignore  Cargo.toml  Dockerfile.backend  README.md  flake.nix
.claude/: settings.json
.github/workflows/: build-push.yaml
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/routes/: agents.ts  health.ts
backend/src/services/: rust-bridge.ts
crates/wxorca-agents/: Cargo.toml
crates/wxorca-agents/src/: db.rs  lib.rs  state.rs
crates/wxorca-agents/src/agents/: admin_setup.rs  best_practices.rs  docs_helper.rs  mod.rs  troubleshoot.rs  usage_assistant.rs
crates/wxorca-agents/src/prompts/: admin_setup.txt  best_practices.txt  docs_helper.txt  troubleshoot.txt  usage_assistant.txt
crates/wxorca-agents/src/tools/: fetch_examples.rs  mod.rs  search_docs.rs  validate_config.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentChat.tsx  AgentSelector.tsx  MessageBubble.tsx  ThinkingIndicator.tsx
frontend/src/services/: api.ts
scripts/: ingest_docs.ts
