[workspace]
members = ["crates/wxorca-agents"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["WXOrca Team"]
license = "MIT"
repository = "https://github.com/wxorca/wxorca"

[workspace.dependencies]
oxidizedgraph = { path = "../oxidizedgraph" }
surrealdb = { version = "2", features = ["kv-mem", "protocol-ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
